--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-MONGODB_URL=mongodb+srv://khadijabouchama2:sUBpBm7oFDR7Ip94@cluster0.jcrsa.mongodb.net/mern_ai_chatbot?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=wyhdvvvfxffvd3548nb573553v3d
-COOKIE_SECRET=45fdrcgffujbbbkhvggjgfxddzxdxx
+MONGODB_URL
+JWT_SECRET=
+COOKIE_SECRET=
 PORT =5000
-GEMINI_API_KEY=AIzaSyAssYQhUQleuC2uQE-T0yE52HYqcnVwADQ
+GEMINI_API_KEY=
 # OPEN_AI_SECRET=
